--- a/android_app_test/updated/dev/css/style.css
+++ b/android_app_test/updated/dev/css/style.css
@@ -697,9 +697,10 @@ top: -17px;
     overflow: hidden;
 }
 .m320 .activity-variables .col-sm-3 {
-    width: 90%;;
-    margin: 20px 0px 0px 0px;
-    padding: 0px;
+width: 90%;
+margin: 6px 0px 0px 0px;
+padding: 0px;
+border-bottom: 1px solid #EAF5FA;
 }
 
 .m768.mobile-menu.settings{
@@ -801,10 +802,87 @@ text-align: center;
     padding-left: 10px;
 }
 .m320.mobile-menu .gradesTab .activityVar {
-    font-size: 40px;
-    min-height: 50px;
+font-size: 30px;
+min-height: 30px;
+font-weight: bold;
 }
+
+
 .m320.mobile-menu .varInfo {
     padding: 10px;
     margin: 10px;
+}
+
+.m320.mobile-menu .activityLabel {
+padding-left: 18px;
+}
+
+.mobile-menu.m768 .leftSec {
+max-width: 220px;
+}
+
+.mobile-menu.m768 .leftTabContent {
+margin-left: 217px;
+margin-top: -84px;
+}
+
+.m768.mobile-menu .activity-variables .col-sm-3 {
+width: 45%;
+margin: 6px 7px 0px 0px;
+float: left;
+border: 1px solid #F0F0F0;
+min-height: 120px;
+padding-top: 10px;
+}
+
+.m768.mobile-menu .leftTabContainerWrapper h2 {
+display: none;
+}
+
+.m768.mobile-menu .activityLabel{
+padding-left: 19px;
+padding-right: 10px;
+}
+.m768.mobile-menu .activityVar {
+font: normal normal normal 45px/normal "Delius", Helvetica, sans-serif;
+font-weight: lighter;
+text-align: center;
+min-height: 60px;
+}
+
+.m320.mobile-menu .container-wrapper-start-up {
+background-size: 73% auto;
+background-position: 58px 30px;
+width:250px;
+top: 50%;
+left: 50%;
+margin-left: -145px;
+margin-top: -150px;
+}
+
+.m320.mobile-menu  .search-bar-wrapper {
+padding: 3px;
+background: #fff;
+width: 70%;
+position: absolute;
+top: 40%;
+left: 50%;
+border-radius: 2px;
+border: 1px solid #D3D0D0;
+margin-left: -35%;
+margin-top: 10px;
+}
+
+
+.m768.mobile-menu .search-bar-wrapper {
+padding: 3px;
+background: #fff;
+width: 60%;
+position: absolute;
+top: 40%;
+left: 52%;
+border-radius: 2px;
+border: 1px solid #D3D0D0;
+margin-left: -30%;
+margin-top: 10px;
 }
